--- a/hw-03.md
+++ b/hw-03.md
@@ -1,7 +1,7 @@
-HW 02 - Road traffic accidents
+HW 03 - Road traffic accidents
 ================
-Insert your name here
-Insert date here
+Sarah Madison
+7.13.22
 
 ## Load packages and data
 
@@ -14,7 +14,7 @@ library(dsbox)
 
 ### Exercise 1
 
-Remove this text, and add your answer for Exercise 1 here.
+The dataset “accidents” has 768 rows.
 
 ### Exercise 2
 
