--- a/hw-03.md
+++ b/hw-03.md
@@ -18,20 +18,34 @@ The dataset “accidents” has 768 rows.
 
 ### Exercise 2
 
-Remove this text, and add your answer for Exercise 2 here.
+Each row in the data set represents an individual traffic accident.
 
 ### Exercise 3
 
 Remove this text, and add your answer for Exercise 3 here.
 
 ``` r
-# remove this comment and add the code for Exercise 3 here
+  accidents$day_type <- ifelse(accidents$day_of_week == "Thursday" |accidents$day_of_week == "Wednesday" |accidents$day_of_week == "Tuesday" |accidents$day_of_week == "Monday" |accidents$day_of_week == "Friday", "Weekday", "Weekend")
+ggplot(accidents, aes(x = time, fill = severity)) + 
+  geom_density(alpha = 0.5) + facet_grid(day_type ~.)
 ```
+
+![](hw-03_files/figure-gfm/recreation%20of%20plot-1.png)<!-- -->
 
 ### Exercise 4
 
 Remove this text, and add your answer for Exercise 4 here.
 
 ``` r
-# remove this comment and add the code for Exercise 4 here
+library(ggridges)
+ggplot(accidents, aes(x = time, y = day_of_week, fill = day_of_week)) + 
+  geom_density_ridges(alpha = 0.5) + facet_grid(severity ~.)
 ```
+
+    ## Picking joint bandwidth of 12600
+
+    ## Picking joint bandwidth of 9170
+
+    ## Picking joint bandwidth of 5840
+
+![](hw-03_files/figure-gfm/unnamed-chunk-1-1.png)<!-- -->
