--- a/hw-03.md
+++ b/hw-03.md
@@ -34,8 +34,6 @@ ggplot(accidents, aes(x = time, fill = severity)) +
 
 ### Exercise 4
 
-Remove this text, and add your answer for Exercise 4 here.
-
 ``` r
 library(ggridges)
 ggplot(accidents, aes(x = time, y = day_of_week, fill = day_of_week)) + 
@@ -48,4 +46,57 @@ ggplot(accidents, aes(x = time, y = day_of_week, fill = day_of_week)) +
 
     ## Picking joint bandwidth of 5840
 
-![](hw-03_files/figure-gfm/unnamed-chunk-1-1.png)<!-- -->
+![](hw-03_files/figure-gfm/my%20own%20graph-1.png)<!-- -->
+
+I know I used the same type of visualization plot here as above, but I
+couldn’t find a better way to represent my variables… I created the
+above visualization to depict traffic accident frequencies throughout
+the day on different days of the week. I separated the graphs according
+to seriousness of the accident. Before interpreting the visualization, I
+need to point out something odd. The times range from -10:00:00 -
+30:00:00. This is equivalent to 2:00 pm the previous day - 10:00 am the
+following day.This is a bizarre range, but there are instances occurring
+during those times. Consequently, these accidents are listed as
+occurring on one day, but the timestamp indicates that they actually
+occurred the previous or following day. I could have tried to select for
+those instances and recode them into their correct day category then try
+to cut the graph off somehow so that it only included the appropriate 24
+hour period. I didn’t do this though because I don’t really know why
+this odd thing is happening and I don’t want to incorrectly manipulate
+the data. This is, however, a good example of data being wonky.
+
+Anyways, the figure shows that fatal accidents only occurred on friday,
+while serious and slight accidents occurred on all days of the week.
+This is extremely interesting to me. What is even more interesting. If
+you go by timestamp and time of day, you can see that actually many of
+these accidents occurred on Thursday night as there is a spike in
+frequency between -05:00:00 and 05:00:00. The majority of accidents
+occurred between 10 am and 3 pm. I would have predicted that the
+majority of the friday fatal accidents would be occurring late at night
+while people are drinking and are fatigued from the long workweek.
+Because the data does not actually reflect this prediction, it is
+possible that people are more prepared to go out on Friday nights. They
+don’t have work the next morning and they have planned well for their
+evening adventures. On thursday night, alternatively, people are
+scrambling to get home and get to bed and are pre-occupied with worries
+of the following workday.
+
+``` r
+accidents %>% 
+  dplyr::filter(severity =="Fatal") %>% 
+  dplyr::filter(day_of_week != "Friday") %>%
+  head()
+```
+
+    ## # A tibble: 2 × 32
+    ##   id          easting northing longitude latitude police_force severity vehicles
+    ##   <chr>         <dbl>    <dbl>     <dbl>    <dbl>        <dbl> <fct>       <dbl>
+    ## 1 2018950000…  319970   671230     -3.28     55.9           95 Fatal           1
+    ## 2 2018950001…  327690   668100     -3.16     55.9           95 Fatal           1
+    ## # … with 24 more variables: casualties <dbl>, date <chr>, day_of_week <fct>,
+    ## #   time <time>, district <dbl>, highway <chr>, first_road_class <fct>,
+    ## #   first_road_number <chr>, road_type <fct>, speed_limit <dbl>,
+    ## #   junction_detail <chr>, junction_control <chr>, second_road_class <chr>,
+    ## #   second_road_number <chr>, ped_cross_human <chr>, ped_cross_physical <chr>,
+    ## #   light <fct>, weather <fct>, road_surface <fct>, special_condition <fct>,
+    ## #   hazard <fct>, urban_rural <dbl>, police <chr>, day_type <chr>
